# crass

./: .gitignore  README.md  SPECIFICATION  TODO.md  cv.py  pyproject.toml  requirements.txt  writers.py
.github/workflows/: doc.yml
crass/: cv.py
crass/theme_metro/: base.html.jinja  basics.html.jinja  profiles.html.jinja  socials.html.jinja  style.css.jinja  theme.yaml  tree.html.jinja
docs/: Makefile  serve.sh
docs/source/: api.rst  conf.py  usage.rst
