[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "crass"
authors = [{name = "cal"}]
dynamic = ["version"]
dependencies = [
    "css-html-js-minify",
    "pdfkit",
    "python-slugify",
    "libsass",
    "pydantic-yaml",
    "jinja2"
]
[tool.setuptools]
include-package-data = true